--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-assignment",
+  "name": "app-frontend",
   "version": "1.0.0",
   "description": "online class assignment, built by flask, socket.io and vue.js",
   "main": "index.js",
