--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -6,7 +6,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "socket.io-client": "^2.0.4"
+    "socket.io-client": "^2.0.4",
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
