--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/sancssss/onlineAssignment/issues"
   },
-  "homepage": "https://github.com/sancssss/onlineAssignment#readme"
+  "homepage": "https://github.com/sancssss/onlineAssignment#readme",
+  "dependencies": {
+    "es6-promise": "^4.2.4",
+    "isomorphic-fetch": "^2.2.1"
+  }
 }
